--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   
   <h1 id="introduction">Introduction</h1>
 <p>As the deep learning methods have been largely developed in facial landmark localization task, the requirements of practical applications are growing fast. However, for large poses and occlusion, the accuracy of localization needs to be improved. Here, JD AI Research and NLPR, CASIA sincerely invited researchers and developers from academia and industry to participate in this competition and encourage further discussion on technical and application issues.</p>
-<p><img src="C:/d/hugo/sites/blog/pic/trainingdata.png" alt="display of training data"></p>
+<p><img src="../pic/trainingdata.png" alt="display of training data"></p>
 <p><strong>Official email: <a href="mailto:facial_lmgc_icme@163.com">facial_lmgc_icme@163.com</a></strong></p>
 <h1 id="news">News</h1>
 <p>2019/7/22 - The JD-landmark dataset has been released and can be downloaded from <a href="https://sites.google.com/view/hailin-shi">https://sites.google.com/view/hailin-shi</a>.     If you use this dataset, please cite the paper &ldquo;Yinglu Liu, Hao Shen, Yue Si, Xiaobo Wang, Xiangyu Zhu, Hailin Shi, et al. &ldquo;Grand Challenge of 106-Point Facial Landmark Localization.&rdquo; In 2019 IEEE International Conference on Multimedia and Expo (ICME) Workshop. IEEE, 2019.&rdquo;</p>
